fixes extra space in parentDiv

--- a/src/screens/UserPortal/Events/Events.module.css
+++ b/src/screens/UserPortal/Events/Events.module.css
@@ -14,14 +14,9 @@
   max-width: 800px;
 }
 
-.colorLight {
-  background-color: #f1f3f6;
-}
-
 .mainContainer {
   width: 50%;
   flex-grow: 3;
-  padding: 20px;
   max-height: 100%;
   overflow: auto;
 }
