--- a/src/screens/UserPortal/Posts/Posts.module.css
+++ b/src/screens/UserPortal/Posts/Posts.module.css
@@ -13,7 +13,6 @@
 .mainContainer {
   width: 50%;
   flex-grow: 3;
-  padding: 1rem;
   max-height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
